# kelly-music-brain-clean

./: .clang-format  .dockerignore  .gitignore  00_START_HERE.md  AGENT_COORDINATION.md  ANTHROPIC_API_SETUP.md  API_KEY_SETUP.md  ARCHITECTURE_INDEX.md  ARCHIVED_OLD_WORKSPACE.md  BUILD_API_SERVER.md  BUILD_SUCCESS.md  CHANGES_SUMMARY.md  CLI_EMOTION_DETECTION.md  CMakeLists.txt  COMPLETE_PROJECT_ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INSTALLATION_COMPLETE.md  INTENT_ML_TRAINING_SUMMARY.md  Logger.py  MASTER_INTEGRATION_PLAN.md  MEDIUM_TERM_PROGRESS.md  MILESTONES.md  MULTI_VERSION_GUIDE.md  NEXT_STEPS.md  PLUGIN_INSTALLATION_GUIDE.md  PLUGIN_SETUP_COMPLETE.md  PRODUCTION_READY.md  PROJECT_TIMELINE.md  QUICK_START_RR.md  README.md  READY_FOR_API_KEY.md  RR_CLAUDE_INTEGRATION.md  RR_SUMMARY.md  RR_TEACH_QUICK_REFERENCE.md  RUN_ALL_COMPONENTS.md  SETUP_COMPLETE.md  SETUP_STATUS.md  SETUP_SUMMARY.md  TEACH_COMMAND_GUIDE.md  (+13 more)
.agents/: QUICK_START.md
.claude/: rr-config.json
.claude/commands/: rr.md
.cursor/: research-template.md
.cursor/plans/: build_and_test_python_bridge_35f0a843.plan.md  build_documentation_plan_a1f8d8ee.plan.md
.devcontainer/: AGENT_PROMPTS.md  Dockerfile  README.md  devcontainer.json  post-create.sh  setup-gpu.sh
.github/: copilot-instructions.md
.github/workflows/: build-plugins.yml  ci-cpp.yml  ci-python.yml  ci.yml  release-monorepo.yml
ML Kelly Training/: train_mps_stub.py
ML Kelly Training/tests/: hardware_benchmarks.py  mac_mps_16gb.yaml  run_all_hardware_tests.sh
Songwriting_Guides/: song_intent_schema.md
audio-engine-cpp/build-debug/: .ninja_deps  .ninja_log  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  compile_commands.json  penta_tests-b12d07c_include.cmake  penta_tests-b12d07c_tests.cmake
audio-engine-cpp/build_final/: CTestTestfile.cmake  (+1 more)
benchmarks/: ANALYSIS_SUMMARY.md
claude_code_plugin/: README.md  install.sh  manifest.json
configs/: __init__.py  config_loader.py  dryrun_ssl.yaml  dynamics_engine.yaml  emotion_node_classifier.yaml  freesound_config.json.template  macOS_16gb_optimized.yaml  music_foundation_base.yaml  music_foundation_dry_run.yaml  nvidia_cuda_optimized.yaml  storage.py  storage_paths.yaml
cpp_music_brain/: CMakeLists.txt
datasets/: README.md
docs/: AGENT_CONTRACT.md  API_EXAMPLES.md  API_GUIDE.md  COMPREHENSIVE_DEVELOPMENT_WORKFLOW.md  CONSISTENCY_REVIEW.md  CONTRIBUTING.md  DATASET_METADATA_SCHEMA.md  DEPLOYMENT.md  EMOTION_WHEEL.md  EXPORT_WORKFLOW.md  EXTENDED_SAMPLER_ECOSYSTEM.md  INTENT_UI_AND_PRODUCTION_GUIDE.md  JUCE_PLUGIN_ARCHITECTURE.md  JUCE_PLUGIN_IMPROVEMENTS.md  LEGAL_AND_DATA.md  MIGRATION.md  MK_TRAINING_GUIDELINES.md  ML_TRAINING_DATA_STATUS.md  ML_TRAINING_GUIDE.md  MODEL_CARD_TEMPLATE.md  MODEL_HANDLING.md  NEURAL_DSP_RESEARCH.md  PERF_BENCH.md  PRESET_SYNC.md  PRICING_SKU.md  PRODUCTION_FEATURES.md  QA_FIXTURES.md  QUICK_START.md  README.md  RESEARCH_CHORD_GROOVE_SECTION.md  RESEARCH_DAW_PLUGIN_ARCHITECTURE.md  RESEARCH_KELLY_EMOTION.md  RESEARCH_LYRICS_LLM.md  RESEARCH_QA_GUARDRAILS.md  ROUTING_FLOW.md  TROUBLESHOOTING.md  USER_GUIDE.md
emotion_thesaurus/: emotion_nodes.json
examples/: demo_metadata_loading.py  metadata_example.json  validate_enhancements.py
mcp_todo/: __init__.py  models.py  server.py  storage.py
mcp_workstation/: __init__.py  models.py  phases.py  proposals.py
miDiKompanion-clean/: CMakeLists.txt  MISSING_FILES_README.md
ml_framework/: README.md  requirements.txt
ml_training/: CULTURAL_TEMPORAL_EXTENSION.md  Dockerfile  Dockerfile.data  IMPLEMENTATION_PROCEDURE.md  README.md  Train_MidiKompanion_Models.ipynb  ab_test.py  docker-compose.yml  export_to_onnx.py  node_aware_training.py  prepare_datasets.py  requirements.txt  test_training_pipeline.py  train_all_models.py  validate_models.py
models/: emotionnodeclassifier.json  instrumentrecognizer.json  registry.json  registry.schema.json
multi_task_framework/: README.md  __init__.py  base.py  encoders.py  examples.py  factory.py  heads.py  trainer.py
music_brain/: __init__.py  api.py  auth.py  cli.py  common.py  emotion_api.py  emotion_sampler.py  groove_engine.py  harmony.py  metrics.py  middleware.py
penta_core/: server.py
python/: __init__.py  requirements.txt
recovered_downloads/: README.md
recovered_downloads/iDAW-copilot-merge-code-assets-workflows/: README.md  VERSION  pyproject.toml  requirements.txt
research/: QUICKSTART.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  audio-emotion-detection-research.md  k2_research_automation.py  research-index.md
rr_cli/: .env.example  QUICK_START.md  README.md  setup.py
scripts/: bulk_download_data.py  generate_emotion_nodes_json.py  gpu_audio_batch.py  label_music.py  ml_integration_example.py  pack_dataset.py  prepare_datasets.py  pretrain_foundation.py  quickstart_training.py  run_all.sh  run_code_quality.sh  sanitize_datasets.py  setup_ml_env.sh  start_api_server.sh  train.py  train_cuda.py  train_model.py  train_mps_stub.py  verify_cpp_consistency.py
src/: CMakeLists.txt
src-tauri/: Cargo.toml  rustfmt.toml
src/audio/: AudioAnalyzer.cpp  AudioAnalyzer.h  F0Extractor.cpp  F0Extractor.h
src/bridge/: OSCBridge.cpp  OSCBridge.h
src/core/: emotion_thesaurus.cpp  emotion_thesaurus.h
src/harmony/: HarmonyEngine.cpp
src/midi/: MidiExporter.cpp  MidiExporter.h  MidiIO.cpp
src/ml/: MultiModelProcessor.cpp  MultiModelProcessor.h  NodeMLMapper.cpp  NodeMLMapper.h  ONNXInference.cpp  ONNXInference.h  ai_inference.cpp  ai_inference.h
src/plugin/: plugin_editor.cpp  plugin_editor.h  plugin_processor.cpp  plugin_processor.h
src/project/: ProjectManager.cpp  ProjectManager.h
src/ui/: MixerConsolePanel.cpp  MixerConsolePanel.h  ScoreEntryPanel.cpp
src_penta-core/: CMakeLists.txt
tests/: __init__.py  test_emotion_sampler.py  test_integration.cpp  test_over_budget.yaml
tests_music-brain/: test_api_endpoints.py  test_core_modules.py  test_integration_comprehensive.py  test_node_ml_mapper.py  test_path_utils.py  test_penta_core_rules.py  test_performance.py  test_performance_profiling.py
(+888 files in other folders)
