[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midikompanion"
version = "0.1.0"
description = "Music Production AI System - Intelligent music analysis, generation, and production toolkit"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sean Burdges" }
]
keywords = ["music", "ai", "midi", "audio", "production", "music-analysis", "harmony", "groove"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Core audio processing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "soundfile>=0.10.0",
    "audioread>=3.0.0",
    "resampy>=0.4.0",
    "numba>=0.57.0",
    # MIDI processing
    "mido>=1.2.10",
    "pretty-midi>=0.2.10",
    "music21>=9.0.0",
    # Web framework & API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",  # Includes websockets and standard extras
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",  # For HTTP client requests
    "python-dotenv>=1.0.0",
    "fastmcp>=0.1.0",
    # WebSocket support (for collaboration features)
    "websockets>=12.0",
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",  # JWT token handling
    "passlib[bcrypt]>=1.7.4",  # Password hashing
    "python-multipart>=0.0.6",  # Form data parsing
]

[project.optional-dependencies]
# Testing/linting development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",  # For async test support
    # pytest-anyio removed - use pytest-asyncio instead
    "black",
    "ruff",
    "mypy",
    "isort",
    "matplotlib>=3.5.0",
    "tqdm>=4.65.0",
]
# ML/audio research dependencies
research = [
    "speechbrain",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "opensmile",
    "funasr",
    "modelscope",
    "madmom>=0.16.0",
    "openl3>=0.5.0",
    "crepe>=0.0.13",
]
# All dependencies (core + dev + research)
all = [
    "midikompanion[dev,research]",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
  | \.pytest_cache
  # files
  | .*\.pyc
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PL",  # Pylint
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by Black)
    "B008",  # do not perform function calls in argument defaults
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = ["ARG", "PLR2004"]  # allow test fixtures and magic values

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "*.tests.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/__pycache__/*", "*/build/*", "*/dist/*"]

[tool.setuptools]
packages = ["music_brain", "penta_core", "mcp_todo", "mcp_workstation"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.md"]

